move view code lower and fix top 550px, move Fund Transfer App back to jumpotron. reduce the glow effect on view code button.

--- a/src/main/webapp/css/fund-transfer.css
+++ b/src/main/webapp/css/fund-transfer.css
@@ -131,12 +131,13 @@ nav.navbar {
 
 .fund-transfer-steps .heading {
     margin-bottom: 20px;
-    font-size: 26px;
+    font-size: 24px;
 }
 
 .fund-transfer-steps .heading h1 {
     font-weight: 100;
-    color: #69d9f5;
+    color: #FFF;
+    font-size: 28px;
 }
 
 .fund-transfer-steps .heading span {
@@ -321,92 +322,64 @@ label {
 
 .view-code-button-wrapper {
     border: 0px solid #000;
-    top: 40%;
+    top: 560px;
     position: fixed;
     left: 0;
     z-index: 500;
     cursor: pointer;
-    opacity: 0.5;
-    
-    -webkit-transition: all 0.5s;
-    -moz-transition: all 0.5s;
-    transition: all 0.5s;
+    opacity: 0.5;  
 }
 
 .view-code-button-wrapper.glow {
     box-shadow: 0 0 25px #f9e437;
     
-    -webkit-animation: neon3 1.5s ease-in-out infinite alternate;
-    -moz-animation: neon3 1.5s ease-in-out infinite alternate;
-    animation: neon3 1.5s ease-in-out infinite alternate; 
+    -webkit-animation: neon 1s ease-in-out infinite alternate;
+    -moz-animation: neon 1s ease-in-out infinite alternate;
+    animation: neon 1s ease-in-out infinite alternate; 
 }
 
-@-webkit-keyframes neon3 {
+@-webkit-keyframes neon {
   from {
     box-shadow: 0 0 10px #fff,
                0 0 20px  #fff,
-               0 0 30px  #fff,
-               0 0 40px  #f9e437,
-               0 0 70px  #f9e437,
-               0 0 80px  #f9e437,
-               0 0 100px #f9e437,
-               0 0 150px #f9e437;
+               0 0 30px  #f9e437,
+               0 0 40px  #f9e437;
   }
   to {
     box-shadow: 0 0 5px #fff,
                0 0 10px #fff,
-               0 0 15px #fff,
-               0 0 20px #f9e437,
-               0 0 35px #f9e437,
-               0 0 40px #f9e437,
-               0 0 50px #f9e437,
-               0 0 75px #f9e437;
+               0 0 15px #f9e437,
+               0 0 20px #f9e437;
   }
 }
 
-@-moz-keyframes neon3 {
+@-moz-keyframes neon {
   from {
     box-shadow: 0 0 10px #fff,
                0 0 20px  #fff,
-               0 0 30px  #fff,
-               0 0 40px  #f9e437,
-               0 0 70px  #f9e437,
-               0 0 80px  #f9e437,
-               0 0 100px #f9e437,
-               0 0 150px #f9e437;
+               0 0 30px  #f9e437,
+               0 0 40px  #f9e437;
   }
   to {
     box-shadow: 0 0 5px #fff,
                0 0 10px #fff,
-               0 0 15px #fff,
-               0 0 20px #f9e437,
-               0 0 35px #f9e437,
-               0 0 40px #f9e437,
-               0 0 50px #f9e437,
-               0 0 75px #f9e437;
+               0 0 15px #f9e437,
+               0 0 20px #f9e437;
   }
 }
 
-@keyframes neon3 {
+@keyframes neon {
   from {
     box-shadow: 0 0 10px #fff,
                0 0 20px  #fff,
-               0 0 30px  #fff,
-               0 0 40px  #f9e437,
-               0 0 70px  #f9e437,
-               0 0 80px  #f9e437,
-               0 0 100px #f9e437,
-               0 0 150px #f9e437;
+               0 0 30px  #f9e437,
+               0 0 40px  #f9e437;
   }
   to {
     box-shadow: 0 0 5px #fff,
                0 0 10px #fff,
-               0 0 15px #fff,
-               0 0 20px #f9e437,
-               0 0 35px #f9e437,
-               0 0 40px #f9e437,
-               0 0 50px #f9e437,
-               0 0 75px #f9e437;
+               0 0 15px #f9e437,
+               0 0 20px #f9e437;
   }
 }
 
@@ -423,7 +396,7 @@ label {
 
 .view-code-button-wrapper .text {
     background: #fff;
-    color: #0c91b2;
+    color: #858484;
 }
 
 a.update-link {
